[gd_scene load_steps=6 format=3 uid="uid://dxy0abcdef123"]

[ext_resource type="Script" uid="uid://c8dbqjj514koj" path="res://game/mobs/ghost/ghost.gd" id="1_z3k4b"]
[ext_resource type="PackedScene" uid="uid://d3r0rply8mfj" path="res://game/components/damage system/hurtbox.tscn" id="2_h5m3n"]
[ext_resource type="PackedScene" uid="uid://bdy43ueb6q1kq" path="res://game/components/damage system/health_component.tscn" id="3_t4k5l"]
[ext_resource type="Texture2D" uid="uid://co0sm3aayo7no" path="res://game/mobs/ghost/ghost.png" id="4_xau03"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oy2u1"]

[node name="ghost" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 135
script = ExtResource("1_z3k4b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_oy2u1")

[node name="HealthComponent" parent="." instance=ExtResource("3_t4k5l")]
max_hitpoints = 30

[node name="Hurt Box" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_h5m3n")]
health_component = NodePath("../HealthComponent")

[node name="Visual" type="Node2D" parent="."]

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.31, 0.31)
texture = ExtResource("4_xau03")

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_path_update_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
